--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "homepage": "https://github.com/illiaWebDev/react-utils#readme",
   "peerDependencies": {
+    "eventemitter3": "^4 || ^5",
     "react": "^17 || ^18",
-    "react-dom": "^17 || ^18",
-    "eventemitter3": "^4.0.0"
+    "react-dom": "^17 || ^18"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
@@ -60,5 +60,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@illia-web-dev/types": "^0.0.3"
   }
 }
