appropriate portal architecture instead of modal

--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "react-utils",
+  "name": "@illia-web-dev/react-utils",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "precommit": "tsc --noEmit",
-    "transpileToDist": "rm -rf ./dist && tsc",
+    "transpileToDist": "rm -rf ./dist && tsc && rm -rf ./dist/test",
     "ts": "tsc --noEmit --watch",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint:webpack-test-config": "eslint ./src/test/webpack.config.js --no-ignore",
     "prepare": "husky install",
-    "publish-package:test:pack": "npm pack",
-    "publish-package:test:unpack-archive": "tar zxvf",
+    "publish-package:test:pack": "npm run transpileToDist && npm pack",
+    "publish-package:test:unpack-archive": "tar zxvf illia-web-dev-react-utils*",
+    "publish-package:test:clean": "rm -rf ./package && rm -rf illia-web-dev-react-utils*",
     "publish-package:publish": "npm run transpileToDist && npm publish --access public",
     "test-locally": "webpack serve --config ./src/test/webpack.config.js"
   },
