--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@illia-web-dev/react-utils",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
@@ -31,41 +31,41 @@
   "homepage": "https://github.com/illiaWebDev/react-utils#readme",
   "peerDependencies": {
     "@popperjs/core": ">=2.4.0",
-    "eventemitter3": "^4 || ^5",
-    "react": "^17 || ^18",
-    "react-dom": "^17 || ^18"
+    "eventemitter3": ">=4",
+    "react": ">=17",
+    "tslib": ">=2.4.0"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@popperjs/core": "^2.11.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.7.2",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "esbuild-loader": "^2.21.0",
-    "eslint": "^8.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eventemitter3": "^4.0.0",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-refresh": "^0.14.0",
-    "typescript": "^4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+    "@popperjs/core": "2.11.6",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "4.7.2",
+    "@types/webpack-env": "1.18.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "esbuild-loader": "2.21.0",
+    "eslint": "8.32.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eventemitter3": "4.0.7",
+    "fork-ts-checker-webpack-plugin": "7.3.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.3",
+    "react": "18",
+    "react-dom": "18",
+    "react-refresh": "0.14.0",
+    "typescript": "4",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "@illia-web-dev/types": "^0.0.4"
+    "@illia-web-dev/types": "0.0.16"
   }
 }
