--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "scripts": {
-    "precommit": "tsc --noEmit",
-    "transpileToDist": "rm -rf ./dist && tsc && rm -rf ./dist/test",
     "ts": "tsc --noEmit --watch",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "lint:webpack-test-config": "eslint ./src/test/webpack.config.js --no-ignore",
+    "ts:build": "rm -rf ./dist && tsc --noUnusedParameters --noUnusedLocals --sourceMap false --declarationMap false && rm -rf ./dist/test",
+    "=====================================================================1": "",
     "prepare": "husky install",
+    "lint:cache-clean": "rm -rf .eslintcache",
+    "husky:prepush:lint": "eslint -c ./.eslintrc.js --cache .",
+    "husky:prepush:ts": "npm run ts:build",
+    "husky:prepush:combine": "npm run husky:prepush:lint && npm run husky:prepush:ts",
+    "husky:prepush": "npm run husky:prepush:combine; PREPUSH_RESULT=$?; (if [ $PREPUSH_RESULT -eq 1 ]; then echo '\n\n\nPREPUSH CHECK FAILED\n\n\n'; fi;); return $PREPUSH_RESULT",
+    "=====================================================================2": "",
     "publish-package:test:pack": "npm run transpileToDist && npm pack",
     "publish-package:test:unpack-archive": "tar zxvf illia-web-dev-react-utils*",
     "publish-package:test:clean": "rm -rf ./package && rm -rf illia-web-dev-react-utils*",
     "publish-package:publish": "npm run transpileToDist && npm publish --access public",
+    "=====================================================================3": "",
     "test-locally": "webpack serve --config ./src/test/webpack.config.js"
   },
   "repository": {
@@ -30,28 +34,26 @@
   },
   "homepage": "https://github.com/illiaWebDev/react-utils#readme",
   "peerDependencies": {
-    "@popperjs/core": ">=2.4.0",
     "eventemitter3": ">=4",
     "react": ">=17",
     "tslib": ">=2.4.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-    "@popperjs/core": "2.11.6",
     "@types/react": "18",
     "@types/react-dom": "18",
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "4.7.2",
     "@types/webpack-env": "1.18.0",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
+    "@typescript-eslint/eslint-plugin": "6.9.0",
+    "@typescript-eslint/parser": "6.9.0",
     "esbuild-loader": "2.21.0",
-    "eslint": "8.32.0",
+    "eslint": "8.52.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eventemitter3": "4.0.7",
     "fork-ts-checker-webpack-plugin": "7.3.0",
@@ -60,7 +62,7 @@
     "react": "18",
     "react-dom": "18",
     "react-refresh": "0.14.0",
-    "typescript": "4",
+    "typescript": "5.2.2",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1"
